Front End Fetch for Dashboard, Notification

--- a/src/main/resources/templates/admin/ProductDashboard.html
+++ b/src/main/resources/templates/admin/ProductDashboard.html
@@ -6,8 +6,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body class="bg-gray-200">
+    <div th:replace="admin/Header.html :: Header"></div>
+
     <div class="text-center p-6">
-        <button onclick="window.location.href='/notifications.html'" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Go to Notifications</button>
+        <button onclick="window.location.href='/notifications'" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Go to Notifications</button>
         <div class="inline-block mt-6">
             <label for="sortMethod" class="text-lg font-medium">Sort By:</label>
             <select id="sortMethod" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5" onchange="fetchProducts()">
@@ -18,17 +20,16 @@
             </select>
         </div>
     </div>
-
     <div id="products" class="flex flex-wrap justify-center"></div>
-
+    <div th:replace="admin/Footer.html :: Footer"></div>
     <script th:inline="javascript">
         /*<![CDATA[*/
-        var baseUrl = 'http://localhost:8080/product';
+        var baseUrl = 'http://34.126.65.178/product';
+        // Change this if cookie already setup
+        var token = 'eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJjdXN0b21lciIsImlhdCI6MTcxNTI2OTgyOSwiZXhwIjoxNzE1MzU2MjI5fQ._tED3zCVqMzaIw-6egxIZDcPhPrxPN8og10LrQh_4R4';
 
         function fetchProducts() {
             var sortMethod = $('#sortMethod').val();
-            var token = 'eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJjdXN0b21lciIsImlhdCI6MTcxNTI2OTgyOSwiZXhwIjoxNzE1MzU2MjI5fQ._tED3zCVqMzaIw-6egxIZDcPhPrxPN8og10LrQh_4R4';
-            console.log('Making AJAX request to:', baseUrl + '/getAllProducts?sort=' + sortMethod);
             $.ajax({
                 url: baseUrl + '/getAllProducts?sort=' + sortMethod,
                 type: 'GET',
@@ -37,7 +38,11 @@
                 },
                 success: function (products) {
                     var productHtml = products.map(function(product) {
+                        const formattedDate = new Date(product.productAddedDate).toLocaleDateString('en-US', {
+                            year: 'numeric', month: 'long', day: 'numeric', hour: '2-digit', minute: '2-digit'
+                        });
                         return `<div class="max-w-sm rounded overflow-hidden shadow-lg bg-white m-4">
+                                    <img class="w-40 h-40 object-cover" src="${product.productImage}" alt="${product.productName}">
                                     <div class="px-6 py-4">
                                         <div class="font-bold text-xl mb-2">${product.productName}</div>
                                         <p class="text-gray-700 text-base">
@@ -45,13 +50,12 @@
                                         </p>
                                     </div>
                                     <div class="px-6 py-4">
-                                        <div class="font-bold text-xl mb-2">${product.productAddedDate}</div>
                                         <p class="text-gray-700 text-base">
-                                            Date Added: $${product.productAddedDate}
+                                            Date Added: ${formattedDate}
                                         </p>
                                     </div>
                                     <div class="px-6 pt-4 pb-2">
-                                        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" onclick="fetchProductById('${product.id}')">
+                                        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" onclick="redirectToProductDetails('${product.productId}')">
                                             View Details
                                         </button>
                                     </div>
@@ -76,6 +80,10 @@
                     alert('Product not found!');
                 }
             });
+        }
+        function redirectToProductDetails(productId) {
+            var detailUrl = `/ProductDetails/${productId}`;;
+            window.location.href = detailUrl; // Redirect to a new HTML page that will display product details
         }
 
         $(document).ready(function() {
