--- a/src/main/resources/templates/admin/CreateProduct.html
+++ b/src/main/resources/templates/admin/CreateProduct.html
@@ -5,6 +5,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
+    <div th:replace="admin/Header.html :: Header"></div>
+
     <h2>Create New Product</h2>
     <form id="createProductForm">
         <label for="productName">Product Name:</label><br>
@@ -20,7 +22,7 @@
     </form>
 
     <div id="responseMessage"></div>
-
+    <div th:replace="admin/Footer.html :: Footer"></div>
     <script th:inline="javascript">
         /*<![CDATA[*/
         var baseUrl = 'http://34.126.65.178/product';
