--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <!-- Other content -->
-<button id="logoutButton" th:action="@{/auth/logout}" method="post">Logout</button>
+<button id="logoutButton">Logout</button>
 <!-- More content -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script th:src="@{/js/logout.js}"></script>
