fix: modify backend endpoint url

--- a/src/main/resources/templates/voucher/editVoucher.html
+++ b/src/main/resources/templates/voucher/editVoucher.html
@@ -50,7 +50,7 @@
     </div>
 
     <script th:inline="javascript">
-        const endpointUrl = 'http://localhost:8080';
+        const endpointUrl = 'http://34.124.139.225';
 
         const urlParams = new URLSearchParams(window.location.search);
         const voucherId = urlParams.get('id');
