--- a/src/main/resources/templates/voucher/createVoucher.html
+++ b/src/main/resources/templates/voucher/createVoucher.html
@@ -48,7 +48,7 @@
     </div>
 
 <script th:inline="javascript">
-    const endpointUrl = 'http://localhost:8080';
+    const endpointUrl = 'http://34.124.139.225';
 
     function generateUUID() {
         return ([1e7]+-1e3+-4e3+-8e3+-1e11).replace(/[018]/g, c =>
