--- a/src/main/resources/templates/voucher/voucherDashboard.html
+++ b/src/main/resources/templates/voucher/voucherDashboard.html
@@ -47,7 +47,7 @@
     </main>
 
     <script>
-        const endpointUrl = 'http://localhost:8080';
+        const endpointUrl = 'http://34.124.139.225';
 
         const urlParams = new URLSearchParams(window.location.search);
         const message = urlParams.get('message');
