--- a/src/main/resources/templates/voucher/voucherDashboard.html
+++ b/src/main/resources/templates/voucher/voucherDashboard.html
@@ -13,31 +13,8 @@
 
     <div id="details-modal" style="display: none" class="fixed inset-0 z-10 flex items-center justify-center ">
         <div onclick="closeModal()" class="absolute w-screen h-screen bg-opacity-75 bg-gray-700"></div>
-        <div class="z-10 bg-white p-6 rounded-lg shadow-md max-w-md mx-auto">
+        <div id="details-container" class="z-10 bg-white p-6 rounded-lg shadow-md max-w-md mx-auto">
             <h2 class="text-2xl font-bold mb-6 text-center">Voucher Details</h2>
-
-            <div class="detail-label font-bold">Voucher ID:</div>
-            <div id="voucherId" class="detail-value mb-2"></div>
-
-            <div class="detail-label font-bold">Voucher Name:</div>
-            <div id="voucherName" class="detail-value mb-2"></div>
-
-            <div class="detail-label font-bold">Voucher Description:</div>
-            <div id="voucherDescription" class="detail-value mb-2"></div>
-
-            <div class="detail-label font-bold">Voucher Start Date:</div>
-            <div id="voucherStartDate" class="detail-value mb-2"></div>
-
-            <div class="detail-label font-bold">Voucher End Date:</div>
-            <div id="voucherEndDate" class="detail-value mb-2"></div>
-
-            <div class="detail-label font-bold">Voucher Discount (%):</div>
-            <div id="voucherDiscount" class="detail-value mb-2"></div>
-
-            <div class="detail-label font-bold">Voucher Usage Limit:</div>
-            <div id="voucherUsageLimit" class="detail-value mb-2"></div>
-
-            <button onclick="closeModal()" id="close-modal-btn" class="mt-4 px-4 py-2 bg-red-500 text-white rounded">Close</button>
         </div>
     </div>
 
@@ -95,17 +72,67 @@
                 url: endpointUrl + '/voucher-api/get/' + voucherId,
                 method: 'GET',
                 success: function(voucher) {
-                    $('#voucherId').text(voucher.voucherId);
-                    $('#voucherName').text(voucher.voucherName);
-                    $('#voucherDescription').text(voucher.voucherDescription);
-                    $('#voucherStartDate').text(voucher.voucherStartDate.slice(0, 16));
-                    $('#voucherEndDate').text(voucher.voucherEndDate.slice(0, 16));
-                    $('#voucherDiscount').text(voucher.voucherDiscount);
-                    $('#voucherUsageLimit').text(voucher.voucherUsageLimit);
+
+                    const container = $('#details-container');
+
+                    container.append(`
+                        <div class="detail-label font-bold">Voucher ID:</div>
+                        <div class="detail-value mb-2"> ${voucher.voucherId}</div>
+
+                        <div class="detail-label font-bold">Voucher Name:</div>
+                        <div class="detail-value mb-2">${voucher.voucherName}</div>
+
+                        <div class="detail-label font-bold">Voucher Description:</div>
+                        <div class="detail-value mb-2">${voucher.voucherDescription}</div>
+
+                        <div class="detail-label font-bold">Voucher Discount (%):</div>
+                        <div class="detail-value mb-2">${voucher.voucherDiscount}</div>
+
+                        <hr class="my-4">
+
+                        <div class="detail-label font-bold">Voucher Expiration Type:</div>
+                        <div class="detail-value mb-2">${voucher.voucherType}</div>
+
+                    `);
+
+                    if (voucher.voucherType === "Expired Date and Usage Limit") {
+                        container.append(`
+                            <div class="detail-label font-bold">Voucher Start Date:</div>
+                            <div class="detail-value mb-2">${voucher.voucherStartDate}</div>
+
+                            <div class="detail-label font-bold">Voucher End Date:</div>
+                            <div class="detail-value mb-2">${voucher.voucherEndDate}</div>
+
+                            <div class="detail-label font-bold">Voucher Usage Limit:</div>
+                            <div class="detail-value mb-2">${voucher.voucherUsageLimit}</div>
+                        `);
+                    }
+
+                    if (voucher.voucherType === "Expired Date") {
+                        container.append(`
+                            <div class="detail-label font-bold">Voucher Start Date:</div>
+                            <div class="detail-value mb-2">${voucher.voucherStartDate}</div>
+
+                            <div class="detail-label font-bold">Voucher End Date:</div>
+                            <div class="detail-value mb-2">${voucher.voucherEndDate}</div>
+                        `);
+                    }
+
+                    if (voucher.voucherType === "Usage Limit") {
+                        container.append(`
+                            <div class="detail-label font-bold">Voucher Usage Limit:</div>
+                            <div class="detail-value mb-2">${voucher.voucherUsageLimit}</div>
+                        `);
+                    }
+
+                    container.append(`
+                            <button onClick="closeModal()" id="close-modal-btn"
+                            class="mt-4 px-4 py-2 bg-red-500 text-white rounded">Close</button>
+                    `);
 
                     $('#details-modal').css('display', 'flex');
                 },
-                error: function() {
+                error: function () {
                     console.error('Error fetching voucher details.');
                 }
             });
@@ -116,11 +143,11 @@
             $.ajax({
                 url: endpointUrl + '/voucher-api/delete/' + voucherId,
                 method: 'DELETE',
-                success: function() {
+                success: function () {
                     $('#voucher-' + voucherId).remove();
                     $('#responseMessage').html('<p class="text-green-600">Voucher deleted successfully!</p>');
                 },
-                error: function() {
+                error: function () {
                     $('#responseMessage').html('<p class="text-red-600">Error deleting voucher.</p>');
                 }
             });
@@ -133,6 +160,7 @@
 
         function closeModal() {
             $('#details-modal').css('display', 'none');
+            $('#details-container').empty();
         }
     </script>
 </body>
