--- a/src/main/resources/templates/voucher/editVoucher.html
+++ b/src/main/resources/templates/voucher/editVoucher.html
@@ -35,18 +35,18 @@
         <div id="dateFields" class="hidden">
             <div>
                 <label for="voucherStartDate" class="block text-sm font-medium text-gray-700">Voucher Start Date:</label>
-                <input type="datetime-local" id="voucherStartDate" name="voucherStartDate" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
+                <input type="datetime-local" id="voucherStartDate" name="voucherStartDate" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required>
             </div>
 
             <div>
                 <label for="voucherEndDate" class="block text-sm font-medium text-gray-700">Voucher End Date:</label>
-                <input type="datetime-local" id="voucherEndDate" name="voucherEndDate" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
+                <input type="datetime-local" id="voucherEndDate" name="voucherEndDate" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required>
             </div>
         </div>
 
         <div id="limitFields" class="hidden">
             <label for="voucherUsageLimit" class="block text-sm font-medium text-gray-700">Voucher Usage Limit:</label>
-            <input type="number" id="voucherUsageLimit" name="voucherUsageLimit" min="1" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
+            <input type="number" id="voucherUsageLimit" name="voucherUsageLimit" min="1" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required>
         </div>
 
         <div class="text-center">
