init: deploy first

--- a/src/main/resources/templates/admin/ProductDashboard.html
+++ b/src/main/resources/templates/admin/ProductDashboard.html
@@ -96,7 +96,7 @@
             });
         }
         function redirectToProductDetails(productId) {
-            var detailUrl = `/ProductDetails/${productId}`;;
+            var detailUrl = `/ProductDetails/${productId}`;
             window.location.href = detailUrl; // Redirect to a new HTML page that will display product details
         }
 
